# cavibe

./: .gitignore  Cargo.toml  README.md  flake.nix
docs/: configuration.md  runtime-control.md  styles.md  wallpaper.md
src/: color.rs  config.rs  ipc.rs  main.rs
src/audio/: capture.rs  fft.rs  mod.rs
src/display/: mod.rs  terminal.rs  wallpaper.rs  wayland.rs
src/metadata/: mod.rs
src/renderer/: layout.rs  mod.rs  styles.rs  text.rs
src/visualizer/: ascii_font.rs  bars.rs  braille.rs  mod.rs  radial.rs  styles.rs  text.rs
