[package]
name = "cavibe"
version = "0.5.0"
edition = "2021"
authors = ["barrulus"]
description = "Audio visualizer with animated song display - terminal and wallpaper modes"
license = "MIT"
repository = "https://github.com/barrulus/cavibe"
keywords = ["audio", "visualizer", "terminal", "cava", "music"]
categories = ["multimedia", "visualization", "command-line-utilities"]

[dependencies]
# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Audio capture and analysis
libpulse-binding = "2.28"
libpulse-simple-binding = "2.28"
rustfft = "6.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

# Color handling
palette = "0.7"

# MPRIS for song metadata (Linux)
mpris = "2"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# X11 support for wallpaper mode
x11rb = { version = "0.13", features = ["allow-unsafe-code"], optional = true }

# Wayland support for wallpaper mode (layer-shell)
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["client", "staging"], optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }
smithay-client-toolkit = { version = "0.19", optional = true }

[features]
default = ["terminal", "wayland"]
terminal = []
wallpaper = ["dep:x11rb"]
wayland = ["dep:wayland-client", "dep:wayland-protocols", "dep:wayland-protocols-wlr", "dep:smithay-client-toolkit"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
